--- a/.travis.yml
+++ b/.travis.yml
@@ -1,1 +1,8 @@
 language: go
+
+before_install:
+  - go get github.com/mgechev/revive
+
+script:
+  - $HOME/gopath/bin/revive -config revive.toml ./...
+  - go test -v ./...
